<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sprelf.canadatax.InputActivity">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/backgroundpic"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/Input_FieldHeight"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Input_Currency"
                    style="@style/InputLabelText"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_CurrencyLabel"/>

                <Spinner
                    android:id="@+id/Input_CurrencySpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/Input_FieldHeight"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Input_Year"
                    style="@style/InputLabelText"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_YearLabel"/>

                <Spinner
                    android:id="@+id/Input_YearSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/Input_FieldHeight"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Input_Income"
                    style="@style/InputLabelText"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_IncomeLabel"/>

                <EditText
                    android:id="@+id/Input_IncomeInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/Input_IncomeHint"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/Input_FieldHeight"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/Input_AnnualHourly"
                        style="@style/InputLabelText"
                        android:layout_height="wrap_content"
                        android:text="@string/Input_AnnualHourlyLabel"/>

                    <Spinner
                        android:id="@+id/Input_AnnualHourlySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="12dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/Input_HourInputArea"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/Input_FieldHeight"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/Input_Hours"
                        style="@style/InputLabelText"
                        android:layout_height="wrap_content"
                        android:text="@string/Input_HoursLabel"/>

                    <EditText
                        android:id="@+id/Input_HoursInput"
                        android:layout_width="90sp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:hint="@string/Input_HoursHint"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="@dimen/Input_FieldHeight"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Input_RRSP"
                    style="@style/InputLabelText"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_RRSPLabel"/>

                <EditText
                    android:id="@+id/Input_RRSPInput"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:hint="@string/Input_RRSPHint"
                    android:inputType="numberDecimal"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/Input_FieldHeight"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Input_Province"
                    style="@style/InputLabelText"
                    android:layout_height="wrap_content"
                    android:text="@string/Input_ProvinceLabel"/>

                <Spinner
                    android:id="@+id/Input_ProvinceSpinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"/>
            </LinearLayout>

            <Button
                android:id="@+id/Input_ContinueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:onClick="onContinueClick"
                android:text="@string/Input_ContinueLabel"/>

            <TextView
                android:id="@+id/Input_ErrorText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="@color/colorRed"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </LinearLayout>

    </FrameLayout>


</ScrollView>
